--- a/jenkins/Dockerfile
+++ b/jenkins/Dockerfile
@@ -3,23 +3,16 @@ FROM jenkins/jenkins:lts
 ARG NET_CORE_APP_NAME=netcoreapp
 
 ENV JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
+ENV JENKINS_HOME /var/jenkins_home
 
 USER root
 
-RUN \
-    apt-get update && \
-    DEBIAN_FRONTEND=noninteractive \
-    apt-get install --quiet --yes --fix-missing \
-    python3-pip \
-    ruby-full \
-    jq
-
-# download archery into container
-RUN pip install archerysec-cli
-RUN apt-get install jq
-
 # copy plugins to jenkins directory
 COPY plugins.txt /usr/share/jenkins/plugins.txt
+
+# create the jenkins job directory and copy the job configuration
+RUN mkdir -p "$JENKINS_HOME"/jobs/"$NET_CORE_APP_NAME"
+COPY "$NET_CORE_APP_NAME".xml "$JENKINS_HOME"/jobs/"$NET_CORE_APP_NAME"/config.xml
 
 # create temporary scripts folder
 RUN mkdir -p /var/dockerscripts
@@ -51,6 +44,19 @@ RUN /bin/bash -c "source /var/dockerscripts/installnetcoresdk.sh"
 # cleanup of installation scripts
 RUN rm -rf /var/lib/apt/lists/*
 RUN rm -rf /var/dockerscripts
+
+# install python to be able to run Archery CLI in container
+RUN \
+    apt-get update && \
+    DEBIAN_FRONTEND=noninteractive \
+    apt-get install --quiet --yes --fix-missing \
+    python3-pip \
+    ruby-full \
+    jq
+	
+# Install Archery CLI into container
+RUN pip install archerysec-cli
+RUN apt-get install jq
 
 
 
